--- a/views/client/page/home/index.pug
+++ b/views/client/page/home/index.pug
@@ -1,14 +1,19 @@
 include ../../layout/default.pug
 block main
-    .body-container
-        .login-container
-            h2 Đăng Nhập
-            form(action='/users/login', method='POST')
-                .input-group
-                    label(for='email') Email
-                    input(type='email', name='email', required='' id="email")
-                .input-group
-                    label(for='password') Mật khẩu
-                    input(type='password', name='password', required='' id="password")
-                button(type='submit' class="login-button") Đăng Nhập
-                a(href="/users/forgot" class="forgot-link") Quên mật khẩu ? 
+    if(user)
+        h2 Chào Mừng đến trang web Chat
+    else
+        .body-container
+            .login-container
+                h2 Đăng Nhập
+                form(action='/users/login', method='POST')
+                    .input-group
+                        label(for='email') Email
+                        input(type='email', name='email', required='' id="email")
+                    .input-group
+                        label(for='password') Mật khẩu
+                        input(type='password', name='password', required='' id="password")
+                    button(type='submit' class="login-button") Đăng Nhập
+                    a(href="/users/forgot" class="forgot-link") Quên mật khẩu ? 
+    
+        
