--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -10,6 +10,8 @@ html(lang="en")
     include ../partial/header.pug
     block main
 
+    script(src="/socket.io/socket.io.js")
     script(src="/client/js/script.js") 
+    script(src="/client/js/chat.js")
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
