--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -7,11 +7,11 @@ html(lang="en")
         link(rel="stylesheet", href="/client/css/style.css")
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
     body
-    include ../partial/header.pug
-    block main
+        include ../partial/header.pug
+        block main
 
-    script(src="/socket.io/socket.io.js")
-    script(src="/client/js/script.js") 
-    script(src="/client/js/chat.js")
-    script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
-    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+        script(src="/socket.io/socket.io.js" defer)
+        script(src="/client/js/script.js" defer) 
+        script(src="/client/js/chat.js" defer)
+        script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
+        script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
