--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -6,12 +6,14 @@ html(lang="en")
         title #{pageTitle}
         link(rel="stylesheet", href="/client/css/style.css")
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
+        link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css")
     body
         include ../partial/header.pug
         block main
 
         script(src="/socket.io/socket.io.js" defer)
+        <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
         script(src="/client/js/script.js" defer) 
-        script(src="/client/js/chat.js" defer)
+        script(type="module" src="/client/js/chat.js" defer)
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
