--- a/views/client/page/chat/index.pug
+++ b/views/client/page/chat/index.pug
@@ -27,6 +27,9 @@ block main
                 placeholder="Nhập nội dung..."
                 name="content"
               )
+              span( class="btn btn-sm btn-light mx-1" button-icon)
+                <i class="fa-regular fa-face-smile"></i> 
               button
                 | Send
-  
+      div( class="tooltip" role="tooltip")
+        emoji-picker
