--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -7,10 +7,12 @@ html(lang="en")
         link(rel="stylesheet", href="/client/css/style.css")
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css")
+        link(rel="stylesheet", href="https://unpkg.com/file-upload-with-preview/dist/style.css")
     body
         include ../partial/header.pug
         block main
-
+        
+        <script src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js"></script>
         script(src="/socket.io/socket.io.js" defer)
         <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
         script(src="/client/js/script.js" defer) 
