12 : Điền mã otp và reset mật khẩu

--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -30,6 +30,8 @@ header.header
                 a(href="/chat") Chat
               if(user)
                 li
+                  a(href="/users/profile") #{user.username}
+                li
                   a(href="/users/logout") Đăng xuất
               else
                 li
