15 : Làm xong giao diện danh sách đề cử kết bạn

--- a/views/client/page/chat/index.pug
+++ b/views/client/page/chat/index.pug
@@ -1,6 +1,7 @@
 include ../../layout/default.pug
 block main
   .container.my-3
+    include ../../partial/list-button-users.pug
     .row
       .col-12
         .box-head 
