--- a/views/client/partial/list-button-users.pug
+++ b/views/client/partial/list-button-users.pug
@@ -3,7 +3,7 @@
     a(
       class="btn btn-primary m-1"
       href="/users/friend-recomendation-list"
-    ) Danh sách người dùng
+    ) Danh sách đề cử kết bạn
     a(
       class="btn btn-primary m-1"
       href="/users/list-friends"
