--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -19,5 +19,6 @@ html(lang="en")
         <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
         script(src="/client/js/script.js" defer) 
         script(type="module" src="/client/js/chat.js" defer)
+        script(type="module" src="/client/js/users.js" defer)
         script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
