--- a/views/client/page/users/list-accept.pug
+++ b/views/client/page/users/list-accept.pug
@@ -7,7 +7,7 @@ block main
 
     .row
       .col-12
-        h3 Danh sách đề cử kết bạn
+        h3 Danh sách chờ xác nhận kết bạn
 
     .row
       each user in users
@@ -16,16 +16,26 @@ block main
             div(class="inner-avatar")
               img(
                 src=user.avatar
-                alt=user.fullName
+                alt=user.username
               )
             div(class="inner-info")
               div(class="inner-name") #{user.username}
               div(class="inner-buttons")
                 button(
                   class="btn btn-sm btn-primary mr-1"
-                  btn-add-friend=user.id
-                ) Kết bạn
+                  btn-accept-friend=user.id
+                ) Chấp nhận
                 button(
-                  btn-cancel-friend=user.id
                   class="btn btn-sm btn-secondary mr-1"
-                ) Hủy
+                  btn-refuse-friend=user.id
+                ) Từ chối
+                button(
+                  class="btn btn-sm btn-secondary mr-1"
+                  btn-deleted-friend=user.id
+                  disabled
+                ) Đã xóa
+                button(
+                  class="btn btn-sm btn-primary mr-1"
+                  btn-accepted-friend=user.id
+                  disabled
+                ) Đã chấp nhận
