--- a/views/client/page/users/list-friends.pug
+++ b/views/client/page/users/list-friends.pug
@@ -7,7 +7,7 @@ block main
 
     .row
       .col-12
-        h3 Danh sách đề cử kết bạn
+        h3 Danh sách bạn bè
 
     .row
       each user in users
@@ -16,16 +16,15 @@ block main
             div(class="inner-avatar")
               img(
                 src=user.avatar
-                alt=user.fullName
+                alt=user.username
               )
             div(class="inner-info")
               div(class="inner-name") #{user.username}
               div(class="inner-buttons")
                 button(
                   class="btn btn-sm btn-primary mr-1"
-                  btn-add-friend=user.id
-                ) Kết bạn
+                ) Nhắn tin
                 button(
-                  btn-cancel-friend=user.id
                   class="btn btn-sm btn-secondary mr-1"
-                ) Hủy
+                  btn-remove-friend=user.id
+                ) Xóa kết bạn
