17 : Làm xong real time khi mà ấn và hủy kết bạn sẽ cập nhật lại số lượng lời mời ở 2 bên

--- a/views/client/partial/list-button-users.pug
+++ b/views/client/partial/list-button-users.pug
@@ -16,3 +16,7 @@
       class="btn btn-primary m-1"
       href="/users/list-accept"
     ) Lời mời đã nhận
+      span(
+          class="badge badge-light ml-1"
+          badge-users-accept=user.id
+        ) #{user.acceptFriends.length}
