19 : Xong realtime các nút chức năng

--- a/views/client/page/users/list-friends.pug
+++ b/views/client/page/users/list-friends.pug
@@ -9,9 +9,9 @@ block main
       .col-12
         h3 Danh sách bạn bè
 
-    .row
+    .row(list-friend-my-id = user.id)
       each user in users
-        .col-6
+        .col-6(friendId=user.id)
           div(class="box-user")
             div(class="inner-avatar")
               img(
