--- a/views/client/page/users/friend-recomendation-list.pug
+++ b/views/client/page/users/friend-recomendation-list.pug
@@ -9,9 +9,9 @@ block main
       .col-12
         h3 Danh sách đề cử kết bạn
 
-    .row
+    .row(list-recomendation-my-id=user.id)
       each user in users
-        .col-6
+        .col-6(friendId=user.id)
           div(class="box-user")
             div(class="inner-avatar")
               img(
