--- a/views/client/page/users/list-request.pug
+++ b/views/client/page/users/list-request.pug
@@ -9,9 +9,9 @@ block main
       .col-12
         h3 Danh sách lời mời đã gửi
 
-    .row
+    .row(list-request-my-id=user.id)
       each user in users
-        .col-6
+        .col-6(friendId=user.id)
           div(class="box-user add")
             div(class="inner-avatar")
               img(
