--- a/views/client/page/users/list-friends.pug
+++ b/views/client/page/users/list-friends.pug
@@ -28,3 +28,7 @@ block main
                   class="btn btn-sm btn-secondary mr-1"
                   btn-remove-friend=user.id
                 ) Xóa kết bạn
+              div(
+              class="inner-status"
+              statusOnline=user.statusOnline
+            ) <i class="fa-solid fa-circle"></i>
