--- a/views/client/partial/header.pug
+++ b/views/client/partial/header.pug
@@ -27,7 +27,7 @@ header.header
         .inner-menu
           ul
               li
-                a(href="/chat") Chat
+                a(href="/users/list-friends") Bạn bè
               if(user)
                 li
                   a(href="/users/profile") #{user.username}
