Hiển thị danh sách tin nhắn theo phòng chat

--- a/views/client/page/users/list-friends.pug
+++ b/views/client/page/users/list-friends.pug
@@ -24,7 +24,7 @@ block main
                 a(
                   class="btn btn-sm btn-primary mr-1"
                   btn-chat-friend=user.id
-                  href=`/chat/${user.room_vs_friend}`
+                  href=`/chat/${user.roomChat}`
                 ) Nhắn tin
                 button(
                   class="btn btn-sm btn-secondary mr-1"
